refactor(deploy): update ECR tagging format in deploy-generic.yaml to include empty prefix and suffix options

--- a/.github/workflows/deploy-generic.yaml
+++ b/.github/workflows/deploy-generic.yaml
@@ -187,7 +187,7 @@ jobs:
         with:
           images: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.service-identifier }}
           tags: |
-            type=sha,format=long
+            type=sha,format=long,prefix=,suffix=
           flavor: |
             latest=false
       - name: Build
