--- a/.github/workflows/deploy-generic.yaml
+++ b/.github/workflows/deploy-generic.yaml
@@ -32,11 +32,6 @@ on:
         required: false
         type: string
         description: "Optional additional build arguments to pass to the Docker build process. Specify each argument on a new line in the format KEY=VALUE. These arguments will be appended to the existing build-args list."
-      slack-channel-id:
-        required: false
-        type: string
-        description: 'ID of slack channel to notify with build status. Default value is the "deployment" channel, only override in special cases.'
-        default: "C01KL9FUPNK"
       run-tests:
         required: false
         type: boolean
@@ -107,7 +102,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
       - name: Publish result message to slack
         uses: monta-app/slack-notifier-cli-action@main
         if: failure()
@@ -117,7 +112,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
   test:
     name: Test
@@ -155,7 +150,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
   notify_build_start:
     name: Update Slack message for build
@@ -171,7 +166,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
   build:
     name: Build
@@ -272,7 +267,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
   deploy_by_push:
     name: Deploy (push)
@@ -291,7 +286,7 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
       - name: Check out manifest repository
         uses: actions/checkout@v4
@@ -336,5 +331,5 @@ jobs:
           service-name: ${{ inputs.service-name }}
           service-emoji: ${{ inputs.service-emoji }}
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
-          slack-channel-id: ${{ inputs.slack-channel-id }}
+          slack-channel-id: "C01KL9FUPNK"
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
