--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,4 +1,4 @@
-name: Build and test (Jacoco)
+name: Build and test (Kover)
 on:
   workflow_call:
     inputs:
@@ -29,6 +29,16 @@ on:
         type: boolean
         default: false
         description: "Upload report to SonarCloud (SONAR_TOKEN must be set)"
+      kover-report-path:
+        required: false
+        type: string
+        description: "Path to the Kover report XML file for code coverage (relative to workspace or absolute)"
+        default: 'build/reports/kover/report.xml'
+      test-timeout-minutes:
+        required: false
+        type: number
+        description: "Timeout for the test job in minutes"
+        default: 30
     secrets:
       GHL_USERNAME:
         required: true
@@ -53,7 +63,7 @@ jobs:
   test:
     name: Test with code coverage
     runs-on: ${{ inputs.action-runner }}
-    timeout-minutes: 30
+    timeout-minutes: ${{ inputs.test-timeout-minutes }}
     steps:
       # Checkout
       - name: Checkout
@@ -83,8 +93,15 @@ jobs:
           GHL_USERNAME: ${{ secrets.GHL_USERNAME }}
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # set the gradle tasks respecting any gradle-module used as input
-        run: ./gradlew --no-daemon ${{ inputs.gradle-module && format('{0}:ktlintCheck {0}:test', inputs.gradle-module) || 'ktlintCheck test' }} ${{ inputs.gradle-parallel-tests && '--parallel' || ''}}
+        # Check if gradle-module is provided and format the command accordingly
+        run: |
+          if [ -z "${{ inputs.gradle-module }}" ]; then
+            # For root project (no module specified)
+            ./gradlew --no-daemon ktlintCheck koverXmlReport koverHtmlReport ${{ inputs.gradle-parallel-tests && '--parallel' || ''}}
+          else
+            # For specific module
+            ./gradlew --no-daemon ${{ format('{0}:ktlintCheck {0}:koverXmlReport {0}:koverHtmlReport', inputs.gradle-module) }} ${{ inputs.gradle-parallel-tests && '--parallel' || ''}}
+          fi
         shell: bash
       # Upload test results
       - name: Upload test results
@@ -93,6 +110,7 @@ jobs:
         with:
           name: test-result
           path: |
+            ${{ github.workspace }}/build/reports/kover
             **/reports/tests/test
             /home/runner/.gradle/daemon/**/daemon-*.out.log
           retention-days: 2
@@ -105,16 +123,16 @@ jobs:
           GHL_PASSWORD: ${{ secrets.GHL_PASSWORD }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew --no-daemon sonar
-      # Add code coverage to PR
       - name: Add code coverage to PR
-        uses: madrapps/jacoco-report@v1.7.1
+        uses: mi-kas/kover-report@v1
         with:
           title: Code Coverage ${{ inputs.gradle-module }}
-          paths: ${{ github.workspace }}/**/jacocoTestReport.xml
+          path: ${{ inputs.kover-report-path }}
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 70
           min-coverage-changed-files: 70
           update-comment: true
+          coverage-counter-type: LINE
       # Publish test results
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v2
