refactor(ci): refactor runner configuration and add gradle-module support to workflows for better flexibility

--- a/.github/workflows/pull-request-kotlin.yaml
+++ b/.github/workflows/pull-request-kotlin.yaml
@@ -4,12 +4,9 @@ on:
     inputs:
       runner-size:
         required: false
-        description: "Runner to use for the job"
+        type: string
+        description: "Runner to use for the job (normal, or large)"
         default: "normal"
-        type: choice
-        options:
-          - "normal"
-          - "large"
       java-distribution:
         required: false
         type: string
@@ -44,7 +41,7 @@ on:
         description: "SonarCloud token"
 jobs:
   get-runner:
-    uses: ./.github/workflows/components/runner-size-converter.yaml
+    uses: component-runner-size-converter.yaml
     with:
       runner-size: ${{ inputs.runner-size }}
   pr_title_checker:
